# ArvoredoWEB

./: .env.example  .gitignore  README.md  estabelecimento2.0.md  guia.md  guia3.md  ngc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  repomix-output.xml  start_arvoredo.bat
artifacts/api-server/: database.py  main.py  models.py  package.json  requirements.txt  schemas.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/routers/: caixa.py  estoque.py  fiado.py  impressora.py  produtos.py  vendas.py
artifacts/arvoredo/: index.html  package.json  requirements.yaml  vite.config.ts
attached_assets/: Pasted-CONTEXTO-E-OBJETIVO-Voc-um-engenheiro-full-stack-s-nior_1774377350192.txt  Pasted-quero-q-a-cor-que-est-azul-seja-verde-cor-de-arvore-Est_1774382039938.txt  Pasted-quero-q-a-cor-que-est-azul-seja-verde-cor-de-arvore-Est_1774467050880.txt
deployment/: .env.example  atualizar.ps1  backup-diario.ps1  backup-excel.ps1  configurar-sistema.ps1  iniciar.ps1  instalacao-completa.ps1  instalar-dependencias.ps1  menu.ps1  parar.ps1
deployment/GUIAS/: BACKUP-EXCEL.md  GUIA-ATUALIZACOES.md  GUIA-DESENVOLVIMENTO.md  GUIA-ESTABELECIMENTO.md  GUIA-FEATURES-ADICIONAIS.md  GUIA-IMPRESSORA-ELGIN-I7.md  GUIA-MAQUININHA-PDV.md  comandos-apos-pull.md  guia-perguntas-estabelecimento.md  pull-para-outros-pcs.md  ultimos-ajustes.md
deployment/SQL/: 2026-04-24-add-categoria-feira.sql  2026-04-24-itens-venda-unidades.sql  criar-banco.sql
lib/api-spec/: openapi.yaml
lib/db/: drizzle.config.cjs  package.json  seed.ts
(+45 files in other folders)
