[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "python-escpos>=3.1",
    "python-multipart>=0.0.22",
    "pyusb>=1.3.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
